fix(loading): update z-index for loading
Fixed an issue where animations were loaded on top of other components

--- a/src/app/components/Chat/main.css
+++ b/src/app/components/Chat/main.css
@@ -4,7 +4,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 101;
+    /*z-index: 101;*/
     background-color: black;
     color: white;
     font-size: 20px;
